[project]
name = "pythonic-structures"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = ["pytest", "pytest-benchmark>=5.2.3", "go-task-bin>=3.46.4"]

[tool.setuptools]
packages = { find = { where = ["."], include = ["*"] } }

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests", "benchmarks"]
python_files = ["test_*.py", "*_test.py", "bench_*.py"]
addopts = "--benchmark-json=benchmarks/results.json"
